--- a/styles/scss/pages/_dashboard.scss
+++ b/styles/scss/pages/_dashboard.scss
@@ -40,9 +40,15 @@
             }
 
             table{
+
+                tbody{
+                    max-width: 100%;
+                    width: 100%;
+                }
                 width: 100%;
                 @include responsive(600px){
                     width: 90%;
+                    max-width: 90%;
                 }
                 height: 100%;
                 font-size: 1.5rem;
@@ -58,11 +64,20 @@
         
                     &:first-child{
                         width: 75%;
+                        max-width: 75%;
                         text-align: left;
+
+                        a{
+                            word-break: break-all;
+                            max-width: 100%;
+                            width: 100%;
+                        }
+
                     }
         
                     &:last-child{
                         text-align: center;
+                        vertical-align: middle;
                     }
                 }
             }
